kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pratyank-app-deployment
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pratyank-app
  template:
    metadata:
      labels:
        app: pratyank-app
    spec:
      containers:
      - name: djangodeployment
        image: pratyank/pratyank3 
        ports:
        - containerPort: 8000
