kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: pratyank-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 32158
